Major overhaul of LuaActivity, and the LuaVM. Also created a working interactive telnet server, with multiple client sockets and threads

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
             </intent-filter>
         </activity>
         <activity android:name="sk.kottman.androlua.LuaActivity" />
+        <activity android:name="com.o080o.scriptastic.LuaActivity" />
         <activity android:name="sk.kottman.androlua.Main" />
         <service android:name="sk.kottman.androlua.Lua" android:permission="android.permission.INTERNET"/>
         <service android:name="com.o080o.scriptastic.LuaService" android:permission="android.permission.INTERNET"/>
