--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
@@ -30,6 +30,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <receiver android:name="com.o080o.scriptastic.BootupBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <activity android:name="com.o080o.scriptastic.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -37,10 +44,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="sk.kottman.androlua.LuaActivity" />
+
         <activity android:name="com.o080o.scriptastic.LuaActivity" />
-        <activity android:name="sk.kottman.androlua.Main" />
-        <service android:name="sk.kottman.androlua.Lua" android:permission="android.permission.INTERNET"/>
         <service android:name="com.o080o.scriptastic.LuaService" android:permission="android.permission.INTERNET"/>
 
     </application>
